tests/typing/bad/testfile-scope-2.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

int main() { int x; if(x) { int y; } else y; }

